feat: added kimchi jigae html page with pictue, ingredients list and instructions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <ul>
         <li><a href="./adobong_sitaw.html">Adobong Sitaw</a></li>
+        <li><a href="./kimchi_jigae">Kimchi Jigae</a></li>
     </ul>
     
 </body>
