--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
     <center><h1>cooking mama's recipes</h1></center>
 
     <div id="bg">
-        <img class="bg-image" src="./images/carasol.png" alt="homepage background image">
+        <center><img class="bg-image" src="./images/carasol.png" alt="homepage background image"></center>
     </div>
 
-    <ul>
-        <li><a href="./adobong_sitaw.html">Adobong Sitaw</a></li>
-        <li><a href="./kimchi_jigae.html">Kimchi Jigae</a></li>
-    </ul>
+    <div class="recipes">
+        <img class="food_pics" src="./images/locomoco.svg">
+        <img class="food_pics" src="./images/locomoco.svg">
+        <img class="food_pics" src="./images/locomoco.svg">
+        <!-- <ul>
+            <li><a href="./adobong_sitaw.html">Adobong Sitaw</a></li>
+            <li><a href="./kimchi_jigae.html">Kimchi Jigae</a></li>
+        </ul> -->
+    </div>
+
+
 
 
     
