feat: adding locomoco recipe page and linked it to index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="recipes">
-        <img class="food_pics" src="./images/locomoco.svg">
+        <a href="./locomoco.html"><img class="food_pics" src="./images/locomoco.svg"></a>
         <img class="food_pics" src="./images/locomoco.svg">
         <img class="food_pics" src="./images/locomoco.svg">
         <!-- <ul>
