--- a/locomoco.html
+++ b/locomoco.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Loco Moco</h1>
+        <span class="recipe-title">Loco Moco</span>
+
+        <div class="recipe-info">
+            <h2>Description</h2>
+            <p>A traditional Hawaiian dish; there are many variations of it, though they mainly are composed of white rice topped with a hamburger steak, egg, and gravy sauce. Though other variations include bacon, chili, spam, ham, pork, sausage, teriyaki beef/chicken, shrimp, oysters, and other meat or seafood Loco Moco.</p>
+            <h2>Description</h2>
+            <p>A traditional Hawaiian dish; there are many variations of it, though they mainly are composed of white rice topped with a hamburger steak, egg, and gravy sauce. Though other variations include bacon, chili, spam, ham, pork, sausage, teriyaki beef/chicken, shrimp, oysters, and other meat or seafood Loco Moco.</p>
+            <h2>Description</h2>
+            <p>A traditional Hawaiian dish; there are many variations of it, though they mainly are composed of white rice topped with a hamburger steak, egg, and gravy sauce. Though other variations include bacon, chili, spam, ham, pork, sausage, teriyaki beef/chicken, shrimp, oysters, and other meat or seafood Loco Moco.</p>
         
-        <h2>Description</h2>
-        <p>A traditional Hawaiian dish; there are many variations of it, though they mainly are composed of white rice topped with a hamburger steak, egg, and gravy sauce. Though other variations include bacon, chili, spam, ham, pork, sausage, teriyaki beef/chicken, shrimp, oysters, and other meat or seafood Loco Moco.</p>
+        </div>
+
+        <div id="bg">
+            <img class="bg-image" src="./images/recipe_bg.png" alt="background picture for recipe page">
+        </div>
     </body>
 </html>
