feat: created sweet & sour pork recipes page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <div class="recipes">
         <a href="./locomoco.html"><img class="food_pics" src="./images/locomoco.svg"></a>
-        <img class="food_pics" src="./images/locomoco.svg">
-        <img class="food_pics" src="./images/locomoco.svg">
+        <a href="./friedpork.html"><img class="food_pics" src="./images/friedpork.png"></a>
+        <img class="food_pics" src="./images/squid-fried-soba.png">
         <!-- <ul>
             <li><a href="./adobong_sitaw.html">Adobong Sitaw</a></li>
             <li><a href="./kimchi_jigae.html">Kimchi Jigae</a></li>
