--- a/locomoco.html
+++ b/locomoco.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>     </h1>
+        <a href="./index.html">< home</a>
+        <br><br>
         <span class="recipe-title">Loco Moco</span>
 
         <div class="recipe-info">
