feat: added squid soba recipe page and changed index background image

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <div id="bg">
         <center>
             <h1>cooking mama's recipes</h1>
-            <img class="bg-image" src="./images/carasol.png" alt="homepage background image">
+            <img class="bg-image" src="./images/index-bg.png" alt="homepage background image">
         </center>
     </div>
 
     <div class="recipes">
-        <a href="./locomoco.html"><img class="food_pics" src="./images/locomoco.svg"></a>
         <a href="./friedpork.html"><img class="food_pics" src="./images/friedpork.png"></a>
-        <img class="food_pics" src="./images/squid-fried-soba.png">
+        <a href="./locomoco.html"><img class="food_pics" src="./images/locomoco.svg"></a>
+        <a href="./squidsoba.html"><img class="food_pics" src="./images/squid-fried-soba.png"></a>
         <!-- <ul>
             <li><a href="./adobong_sitaw.html">Adobong Sitaw</a></li>
             <li><a href="./kimchi_jigae.html">Kimchi Jigae</a></li>
